Don't forcibly default charset to UTF-8.

This is bad for ICQ: people do actually use ISO-8859-1 there. It's the
default for a reason.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=23542, a mere eight
months later.